--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -2,9 +2,9 @@
     margin: 0;
     padding: 0;
 }
-ul{
-    padding: 0 !important;
-    margin: 0 !important;
+ol, ul, dl{
+    padding: 0;
+    margin: 0;
 }
 li{
     list-style: none;
@@ -16,26 +16,23 @@ body{
 /* SIDE MENU */
 .side-menu{
     position: fixed;
-    background: #000;
+    background: #191919;
     width: 300px;
     height: 100%;
     box-sizing: border-box;
-    padding: 30px 20px;
-    transition: width .2s ease-in;
+    padding: 14px;
+    transition: width .3s ease-in;
 }
 .side-menu .top-section{
     position: relative;
 }
 .side-menu.inactive{
-    width: 80px;
-}
-.side-menu.inactive .close-icon{
-    right: -50px;
+    width: 60px;
 }
 
 .side-menu .logo{
-    width: 40px;
-    height: 40px;
+    width: 34px;
+    height: 34px;
     overflow: hidden;
     display: inline-block;
 }
@@ -43,15 +40,7 @@ body{
     max-width: 100%;
     max-height: 100%;
 }
-.side-menu .close-icon{
-    color: #eee;
-    font-size: 20px;
-    position: absolute;
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
-    cursor: pointer;
-}
+
 .side-menu .divider{
     width: 100%;
     height: 1px;
@@ -69,14 +58,20 @@ body{
     display: block;
     font-size: 14px;
     font-weight: 600;
+    margin: 10px 0;
+}
+
+.side-menu .main-menu .menu-item.active{
+    background-color: #666;
+    border-radius: 2px;
 }
 
 .side-menu .main-menu .menu-item span{
     position: absolute;
     display: inline-block;
-    line-height: 40px;
+    line-height: 35px;
     opacity: 1;
-    transition: opacity .2s ease-in;
+    transition: opacity .3s ease-in;
 }
 
 .side-menu.inactive .main-menu .menu-item span{
@@ -88,33 +83,64 @@ body{
 
 .side-menu .main-menu .menu-item .menu-icon{
     display: inline-block;
-    width: 40px;
-    height: 40px;
-    font-size: 20px;
-    line-height: 40px;
+    width: 34px;
+    height: 34px;
+    font-size: 1.250em !important;
+    line-height: 34px;
     text-align: center;
-}
-
-.side-menu .main-menu .sub-menu {
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height .2s ease-in;
-}
-
-.side-menu .main-menu .sub-menu a{
-    color: #eee;
-    text-decoration: none;
-    display: block;
-    margin: 5px 0;
-    font-size: 15px;
-    font-weight: 600;
-    padding-left: 30px;
 }
 
 .side-menu .main-menu .sub-menu.active{
     max-height: 200px;
 }
 
+.main-menu ul{
+    margin: 0;
+    padding: 0;
+}
+
+.side-menu .main-menu .sub-menu {
+    color: #333;
+    margin-left: 20px;
+    border-left: 1px solid #666;
+    box-sizing: border-box;
+    padding-left: 30px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height .2s ease-in;
+}
+
+.side-menu .main-menu .sub-menu a{
+    display: block;
+    margin: 5px 0 !important;
+    font-size: 15px;
+    font-weight: 600;
+    text-decoration: none;
+    color: #333;
+    box-sizing: border-box;
+    padding: 5px !important;
+}
+
+.side-menu .main-menu .sub-menu.active a:active{
+    /* background: blue;
+    display: block;
+    box-sizing: border-box;
+    padding: 5px;
+    border-radius: 5px; */
+
+    background: #222;
+    display: block;
+    
+    border-radius: 5px;
+    color: #fff;
+}
+
 .page-container{
+    margin-left: 80px;
+    transition: margin-left .3s ease-in;
+    padding: 10px;
+}
+
+.page-container.inactive{
     margin-left: 300px;
 }
